# dcord

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Member.go  README.md  channel.go  client.go  connection.go  constants.go  discord.go  emoji.go  go.mod  guild.go  http.go  member.go  message.go  payload.go  role.go  session.go  sesssion.go  to_do.txt  user.go
src/: channel.rs  constants.rs  emoji.rs  error.rs  event.rs  gateway.rs  guild.rs  invite.rs  lib.rs  manager.rs  member.rs  message.rs  prelude.rs  role.rs  user.rs  utils.rs
src/cache/: mod.rs  settings.rs
src/client/: event_emitter.rs  mod.rs
src/gateway/: mod.rs  shard.rs  voice.rs  ws.rs
src/http/: mod.rs
src/object/: audit_log.rs  auto_moderation.rs  channel.rs  emoji.rs  guild.rs  invite.rs  member.rs  mod.rs  role.rs  webhook.rs
src/voice/: mod.rs
